Add the esp-hal-common crate and make ESP32/ESP32-C3 use its Timer

--- a/esp32-hal/Cargo.toml
+++ b/esp32-hal/Cargo.toml
@@ -14,6 +14,10 @@ xtensa-lx-rt = { version = "0.7", optional = true, features = ["lx6"] }
 [dependencies.esp32]
 path = "../../esp-pacs/esp32"
 
+[dependencies.esp-hal-common]
+path = "../esp-hal-common"
+features = ["enable-esp32"]
+
 [dev-dependencies]
 panic-halt = "0.2"
 
