--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
+paste = "1.0.6"
 embedded-hal = { version = "0.2", features = ["unproven"] }
 nb           = "1.0"
 riscv        = { version = "0.7", optional = true }
@@ -12,8 +13,8 @@ xtensa-lx    = { version = "0.4", optional = true }
 # IMPORTANT:
 # Each supported device MUST have its PAC included below along with a
 # corresponding feature.
-esp32_pac   = { package = "esp32",   git = "https://github.com/jessebraham/esp32.git",   branch = "develop", optional = true }
-esp32c3_pac = { package = "esp32c3", git = "https://github.com/jessebraham/esp32c3.git", branch = "develop", optional = true }
+esp32_pac   = { package = "esp32", git = "https://github.com/bjoernQ/esp32.git", branch = "align-svds", optional = true }
+esp32c3_pac = { package = "esp32c3", git = "https://github.com/bjoernQ/esp32c3.git", branch = "align-svds", optional = true }
 esp32s2_pac = { package = "esp32s2", git = "https://github.com/jessebraham/esp32s2.git", branch = "develop", optional = true }
 esp32s3_pac = { package = "esp32s3", git = "https://github.com/jessebraham/esp32s3.git", branch = "develop", optional = true }
 
