--- a/esp32c3-hal/Cargo.toml
+++ b/esp32c3-hal/Cargo.toml
@@ -1,22 +1,45 @@
 [package]
-name = "esp32c3-hal"
+name    = "esp32c3-hal"
 version = "0.1.0"
-edition = "2018"
+authors = [
+    "Jesse Braham <jesse@beta7.io>",
+    "Björn Quentin <bjoern.quentin@mobile-j.de>",
+]
+edition     = "2021"
+description = "HAL for ESP32-C3 microcontrollers"
+repository  = "https://github.com/esp-rs/esp-hal"
+license     = "MIT OR Apache-2.0"
+
+keywords = [
+    "embedded",
+    "embedded-hal",
+    "esp",
+    "esp32c3",
+    "no-std",
+]
+categories = [
+    "embedded",
+    "hardware-support",
+    "no-std",
+]
+
+[package.metadata.espflash]
+format = "direct-boot"
 
 [dependencies]
-bare-metal = "1.0"
+bare-metal   = "1.0"
 embedded-hal = { version = "0.2", features = ["unproven"] }
-nb = "1.0"
-riscv = "0.7"
-void = { version = "1.0", default-features = false }
+nb           = "1.0"
+riscv        = "0.7"
+void         = { version = "1.0", default-features = false }
 
 [dependencies.esp-hal-common]
-path = "../esp-hal-common"
+path     = "../esp-hal-common"
 features = ["esp32c3"]
 
 [dependencies.riscv-rt] 
-git = "https://github.com/MabezDev/riscv-rt"
-rev = "6b55e4aa3895924e31bcd151f2f0ab840836fa07"
+git      = "https://github.com/MabezDev/riscv-rt"
+rev      = "6b55e4aa3895924e31bcd151f2f0ab840836fa07"
 optional = true
 
 [dev-dependencies]
@@ -24,7 +47,4 @@ panic-halt = "0.2"
 
 [features]
 default = ["rt"]
-rt = ["riscv-rt"]
-
-[package.metadata.espflash]
-format = "direct-boot"
+rt      = ["riscv-rt"]
