--- a/esp32c3-hal/Cargo.toml
+++ b/esp32c3-hal/Cargo.toml
@@ -43,6 +43,9 @@ git      = "https://github.com/MabezDev/riscv-rt"
 rev      = "6b55e4aa3895924e31bcd151f2f0ab840836fa07"
 optional = true
 
+[build-dependencies]
+riscv-target = "0.1.2"
+
 [dev-dependencies]
 panic-halt = "0.2"
 
