--- a/esp32s2-hal/Cargo.toml
+++ b/esp32s2-hal/Cargo.toml
@@ -29,7 +29,7 @@ embedded-hal = { version = "0.2", features = ["unproven"] }
 nb           = "1.0"
 void         = { version = "1.0", default-features = false }
 xtensa-lx    = { version = "0.6.0", features = ["esp32"] } # FIXME
-xtensa-lx-rt = { version = "0.8.0", features = ["esp32"], optional = true }
+xtensa-lx-rt = { version = "0.9.0", features = ["esp32s2"], optional = true }
 
 [dependencies.esp-hal-common]
 path     = "../esp-hal-common"
