--- a/esp32s3-hal/.cargo/config.toml
+++ b/esp32s3-hal/.cargo/config.toml
@@ -1,10 +1,10 @@
 [target.xtensa-esp32s3-none-elf]
-runner = "xtensa-esp32s3-elf-gdb -q -x xtensa.gdb"
+runner = "espflash --monitor"
 
 [build]
 rustflags = [
   "-C", "link-arg=-nostartfiles",
-  "-C", "link-arg=-Wl,-Tesp32s3.x",
+  "-C", "link-arg=-Wl,-Tlinkall.x",
 ]
 target = "xtensa-esp32s3-none-elf"
 
