--- a/esp32c3-hal/Cargo.toml
+++ b/esp32c3-hal/Cargo.toml
@@ -45,6 +45,8 @@ riscv-target = "0.1.2"
 
 [dev-dependencies]
 panic-halt = "0.2"
+ssd1306 = "0.7.0"
+embedded-graphics = "0.7.1"
 
 [features]
 default = ["rt"]
