--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -11,14 +11,15 @@ repository  = "https://github.com/esp-rs/esp-hal"
 license     = "MIT OR Apache-2.0"
 
 [dependencies]
-embedded-hal = { version = "0.2", features = ["unproven"] }
-nb           = "1.0"
-paste        = "1.0"
-riscv        = { version = "0.7", optional = true }
-void         = { version = "1.0", default-features = false }
-xtensa-lx    = { version = "0.6.0", optional = true }
-xtensa-lx-rt = { version = "0.9.0", optional = true }
-procmacros   = { path = "../esp-hal-procmacros", package = "esp-hal-procmacros" }
+embedded-hal                = { version = "0.2", features = ["unproven"] }
+nb                          = "1.0"
+paste                       = "1.0"
+riscv                       = { version = "0.7", optional = true }
+riscv-atomic-emulation-trap = { version = "0.1.0", optional = true }
+void                        = { version = "1.0", default-features = false }
+xtensa-lx                   = { version = "0.6.0", optional = true }
+xtensa-lx-rt                = { version = "0.9.0", optional = true }
+procmacros                  = { path = "../esp-hal-procmacros", package = "esp-hal-procmacros" }
 # IMPORTANT:
 # Each supported device MUST have its PAC included below along with a
 # corresponding feature.
@@ -29,7 +30,7 @@ esp32s3_pac = { package = "esp32s3", git = "https://github.com/esp-rs/esp-pacs.g
 
 [features]
 esp32   = ["esp32_pac",   "esp32_pac/rt",   "xtensa-lx/esp32", "xtensa-lx-rt/esp32", "procmacros/rtc_slow", "dual_core"]
-esp32c3 = ["esp32c3_pac", "esp32c3_pac/rt", "riscv", "single_core"]
+esp32c3 = ["esp32c3_pac", "esp32c3_pac/rt", "riscv", "riscv-atomic-emulation-trap", "single_core"]
 esp32s2 = ["esp32s2_pac", "esp32s2_pac/rt", "xtensa-lx/esp32", "xtensa-lx-rt/esp32s2", "procmacros/rtc_slow", "single_core"]
 esp32s3 = ["esp32s3_pac", "esp32s3_pac/rt", "xtensa-lx/esp32", "xtensa-lx-rt/esp32s3", "procmacros/rtc_slow", "dual_core"]
 
