--- a/esp32c3-hal/Cargo.toml
+++ b/esp32c3-hal/Cargo.toml
@@ -27,13 +27,14 @@ categories = [
 format = "direct-boot"
 
 [dependencies]
-bare-metal   = "1.0"
-embedded-hal = { version = "0.2", features = ["unproven"] }
-nb           = "1.0"
-riscv        = "0.7"
-riscv-rt     = { version = "0.8.1", optional = true }
-void         = { version = "1.0", default-features = false }
-r0           = "1.0.0"
+bare-metal                  = "1.0"
+embedded-hal                = { version = "0.2", features = ["unproven"] }
+nb                          = "1.0"
+riscv                       = "0.7"
+riscv-rt                    = { version = "0.8.1", optional = true }
+void                        = { version = "1.0", default-features = false }
+r0                          = "1.0.0"
+riscv-atomic-emulation-trap = "0.1.0"
 
 [dependencies.esp-hal-common]
 path     = "../esp-hal-common"
