--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -20,6 +20,7 @@ void                        = { version = "1.0", default-features = false }
 xtensa-lx                   = { version = "0.6.0", optional = true }
 xtensa-lx-rt                = { version = "0.9.0", optional = true }
 procmacros                  = { path = "../esp-hal-procmacros", package = "esp-hal-procmacros" }
+cfg-if                      = "1.0.0"
 # IMPORTANT:
 # Each supported device MUST have its PAC included below along with a
 # corresponding feature.
