--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -11,29 +11,39 @@ repository  = "https://github.com/esp-rs/esp-hal"
 license     = "MIT OR Apache-2.0"
 
 [dependencies]
-embedded-hal                = { version = "0.2", features = ["unproven"] }
-nb                          = "1.0"
-paste                       = "1.0"
+cfg-if       = "1.0"
+embedded-hal = { version = "0.2", features = ["unproven"] }
+nb           = "1.0"
+paste        = "1.0"
+procmacros   = { path = "../esp-hal-procmacros", package = "esp-hal-procmacros" }
+void         = { version = "1.0", default-features = false }
+
+# RISC-V
 riscv                       = { version = "0.7", optional = true }
-riscv-atomic-emulation-trap = { version = "0.1.0", optional = true }
-void                        = { version = "1.0", default-features = false }
-xtensa-lx                   = { version = "0.6.0", optional = true }
-xtensa-lx-rt                = { version = "0.9.0", optional = true }
-procmacros                  = { path = "../esp-hal-procmacros", package = "esp-hal-procmacros" }
-cfg-if                      = "1.0.0"
+riscv-atomic-emulation-trap = { version = "0.1", optional = true }
+
+# Xtensa
+xtensa-lx = { version = "0.6", optional = true }
+
 # IMPORTANT:
 # Each supported device MUST have its PAC included below along with a
-# corresponding feature.
-esp32_pac   = { package = "esp32", git = "https://github.com/esp-rs/esp-pacs.git", branch = "with_source", optional = true }
-esp32c3_pac = { package = "esp32c3", git = "https://github.com/esp-rs/esp-pacs.git", branch = "with_source",  optional = true }
+# corresponding feature. We rename the PAC packages because we cannot
+# have dependencies and features with the same names.
+esp32_pac   = { package = "esp32",   git = "https://github.com/esp-rs/esp-pacs.git", branch = "with_source", optional = true }
+esp32c3_pac = { package = "esp32c3", git = "https://github.com/esp-rs/esp-pacs.git", branch = "with_source", optional = true }
 esp32s2_pac = { package = "esp32s2", git = "https://github.com/esp-rs/esp-pacs.git", branch = "with_source", optional = true }
 esp32s3_pac = { package = "esp32s3", git = "https://github.com/esp-rs/esp-pacs.git", branch = "with_source", optional = true }
 
 [features]
-esp32   = ["esp32_pac",   "esp32_pac/rt",   "xtensa-lx/esp32", "xtensa-lx-rt/esp32", "procmacros/rtc_slow", "dual_core"]
-esp32c3 = ["esp32c3_pac", "esp32c3_pac/rt", "riscv", "riscv-atomic-emulation-trap", "single_core"]
-esp32s2 = ["esp32s2_pac", "esp32s2_pac/rt", "xtensa-lx/esp32", "xtensa-lx-rt/esp32s2", "procmacros/rtc_slow", "single_core"]
-esp32s3 = ["esp32s3_pac", "esp32s3_pac/rt", "xtensa-lx/esp32", "xtensa-lx-rt/esp32s3", "procmacros/rtc_slow", "dual_core"]
+esp32   = [  "esp32_pac/rt", "xtensa",   "dual_core"]
+esp32c3 = ["esp32c3_pac/rt", "risc_v", "single_core"]
+esp32s2 = ["esp32s2_pac/rt", "xtensa", "single_core"]
+esp32s3 = ["esp32s3_pac/rt", "xtensa",   "dual_core"]
 
+# Architecture (should not be enabled directly, but instead by a PAC's feature)
+risc_v = ["riscv", "riscv-atomic-emulation-trap"]
+xtensa = ["procmacros/rtc_slow", "xtensa-lx/esp32"]
+
+# Core Count (should not be enabled directly, but instead by a PAC's feature)
 single_core = []
-dual_core = []
+dual_core   = []
