--- a/esp32s2-hal/Cargo.toml
+++ b/esp32s2-hal/Cargo.toml
@@ -28,7 +28,7 @@ bare-metal   = "1.0"
 embedded-hal = { version = "0.2", features = ["unproven"] }
 nb           = "1.0"
 void         = { version = "1.0", default-features = false }
-xtensa-lx    = { version = "0.6.0", features = ["esp32"] } # FIXME
+xtensa-lx    = { version = "0.7.0", features = ["esp32s2"] }
 xtensa-lx-rt = { version = "0.11.0", features = ["esp32s2"], optional = true }
 
 [dependencies.esp-hal-common]
@@ -42,5 +42,5 @@ embedded-graphics = "0.7.1"
 
 [features]
 default = ["rt"]
-rt      = ["xtensa-lx-rt"]
+rt      = ["xtensa-lx-rt/esp32s2"]
 ufmt    = ["esp-hal-common/ufmt"]
