--- a/esp32c3-hal/Cargo.toml
+++ b/esp32c3-hal/Cargo.toml
@@ -40,6 +40,7 @@ features = ["esp32c3"]
 embedded-graphics = "0.7"
 panic-halt        = "0.2"
 ssd1306           = "0.7"
+smart-leds        = "0.3"
 
 [features]
 default     = ["rt"]
