--- a/esp32s3-hal/Cargo.toml
+++ b/esp32s3-hal/Cargo.toml
@@ -39,6 +39,7 @@ features = ["esp32s3"]
 embedded-graphics = "0.7"
 panic-halt        = "0.2"
 ssd1306           = "0.7"
+smart-leds        = "0.3"
 
 [features]
 default = ["rt"]
