--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -13,6 +13,7 @@ license     = "MIT OR Apache-2.0"
 [dependencies]
 cfg-if       = "1.0"
 embedded-hal = { version = "0.2", features = ["unproven"] }
+fugit        = "0.3"
 nb           = "1.0"
 paste        = "1.0"
 procmacros   = { path = "../esp-hal-procmacros", package = "esp-hal-procmacros" }
