--- a/esp32c3-hal/Cargo.toml
+++ b/esp32c3-hal/Cargo.toml
@@ -26,9 +26,10 @@ categories = [
 [dependencies]
 bare-metal   = "1.0"
 embedded-hal = { version = "0.2", features = ["unproven"] }
+fugit        = "0.3"
 nb           = "1.0"
-r0           = "1.0.0"
-riscv        = "0.8.0"
+r0           = "1.0"
+riscv        = "0.8"
 riscv-rt     = { version = "0.8", optional = true }
 void         = { version = "1.0", default-features = false }
 
