--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -11,13 +11,14 @@ repository  = "https://github.com/esp-rs/esp-hal"
 license     = "MIT OR Apache-2.0"
 
 [dependencies]
-cfg-if       = "1.0"
-embedded-hal = { version = "0.2", features = ["unproven"] }
-fugit        = "0.3"
-nb           = "1.0"
-paste        = "1.0"
-procmacros   = { path = "../esp-hal-procmacros", package = "esp-hal-procmacros" }
-void         = { version = "1.0", default-features = false }
+cfg-if         = "1.0"
+embedded-hal   = { version = "0.2", features = ["unproven"] }
+embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-alpha.8" }
+fugit          = "0.3"
+nb             = "1.0"
+paste          = "1.0"
+procmacros     = { path = "../esp-hal-procmacros", package = "esp-hal-procmacros" }
+void           = { version = "1.0", default-features = false }
 
 # RISC-V
 riscv                       = { version = "0.8", optional = true }
@@ -32,7 +33,6 @@ ufmt-write = { version = "0.1", optional = true }
 
 # Smart-LED (e.g., WS2812/SK68XX) support
 smart-leds-trait = { version = "0.2.1", optional = true }
-
 
 # IMPORTANT:
 # Each supported device MUST have its PAC included below along with a
