--- a/esp32s2-hal/Cargo.toml
+++ b/esp32s2-hal/Cargo.toml
@@ -24,13 +24,14 @@ categories = [
 ]
 
 [dependencies]
-bare-metal   = "1.0"
-embedded-hal = { version = "0.2",  features = ["unproven"] }
-fugit        = "0.3"
-nb           = "1.0"
-void         = { version = "1.0",  default-features = false }
-xtensa-lx    = { version = "0.7",  features = ["esp32s2"] }
-xtensa-lx-rt = { version = "0.11", features = ["esp32s2"], optional = true }
+bare-metal     = "1.0"
+embedded-hal   = { version = "0.2",  features = ["unproven"] }
+embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-alpha.8" }
+fugit          = "0.3"
+nb             = "1.0"
+void           = { version = "1.0",  default-features = false }
+xtensa-lx      = { version = "0.7",  features = ["esp32s2"] }
+xtensa-lx-rt   = { version = "0.11", features = ["esp32s2"], optional = true }
 
 [dependencies.esp-hal-common]
 path     = "../esp-hal-common"
