--- a/esp32-hal/Cargo.toml
+++ b/esp32-hal/Cargo.toml
@@ -43,5 +43,6 @@ smart-leds        = "0.3"
 [features]
 default   = ["rt"]
 bluetooth = []
+eh1       = ["esp-hal-common/eh1"]
 rt        = ["xtensa-lx-rt/esp32"]
 ufmt      = ["esp-hal-common/ufmt"]
