Reading raw ADC data on ESP32 and ESP32-S2

--- a/esp32-hal/.vscode/settings.json
+++ b/esp32-hal/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "rust-analyzer.cargo.features": [],
     "rust-analyzer.cargo.allFeatures": false,
-    "editor.formatOnSave": true,
+    "editor.formatOnSave": false,
     "rust-analyzer.checkOnSave.allTargets": false,
     "rust-analyzer.checkOnSave.allFeatures": false,
     "rust-analyzer.checkOnSave.overrideCommand": [
