--- a/esp32s3-hal/Cargo.toml
+++ b/esp32s3-hal/Cargo.toml
@@ -27,6 +27,9 @@ categories = [
 bare-metal     = "1.0"
 embedded-hal   = { version = "0.2",  features = ["unproven"] }
 embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-alpha.8" }
+fugit          = "0.3"
+nb             = "1.0"
+void           = { version = "1.0",  default-features = false }
 xtensa-lx      = { version = "0.7",  features = ["esp32s3"] }
 xtensa-lx-rt   = { version = "0.12", features = ["esp32s3"], optional = true }
 
@@ -39,10 +42,13 @@ embedded-graphics = "0.7"
 panic-halt        = "0.2"
 ssd1306           = "0.7"
 smart-leds        = "0.3"
-esp-println       = { version = "0.1.0", features = ["esp32s3"] }
+esp-println = { version = "0.2.0", features = ["esp32s3"] }
+critical-section = { git = "https://github.com/embassy-rs/critical-section" }
+
+[patch.crates-io]
+bare-metal     = { version = "1.0", git = "https://github.com/rust-embedded/bare-metal" }
 
 [features]
 default = ["rt"]
-eh1     = ["esp-hal-common/eh1"]
 rt      = ["xtensa-lx-rt/esp32s3"]
 ufmt    = ["esp-hal-common/ufmt"]
