--- a/esp-hal-common/.vscode/esp32s3.settings.json
+++ b/esp-hal-common/.vscode/esp32s3.settings.json
@@ -1,6 +1,6 @@
 {
     "rust-analyzer.cargo.features": [
-        "esp32"
+        "esp32s3"
     ],
     "rust-analyzer.cargo.allFeatures": false,
     "editor.formatOnSave": false,
@@ -10,12 +10,12 @@
         "cargo",
         "check",
         "--features",
-        "esp32",
+        "esp32s3",
         "--message-format=json",
         "-Z",
         "build-std=core",
         "--target",
-        "xtensa-esp32-none-elf",
+        "xtensa-esp32s3-none-elf",
         "--examples",
         "--lib",
     ],
