--- a/esp32s3-hal/Cargo.toml
+++ b/esp32s3-hal/Cargo.toml
@@ -29,6 +29,7 @@ embedded-hal   = { version = "0.2",  features = ["unproven"] }
 embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-alpha.8" }
 xtensa-lx      = { version = "0.7",  features = ["esp32s3"] }
 xtensa-lx-rt   = { version = "0.12", features = ["esp32s3"], optional = true }
+r0             = { version = "1.0.0", optional = true }
 
 [dependencies.esp-hal-common]
 path     = "../esp-hal-common"
@@ -43,6 +44,7 @@ esp-println       = { version = "0.2.0", features = ["esp32s3"] }
 
 [features]
 default = ["rt"]
+direct-boot = ["r0"]
 eh1     = ["esp-hal-common/eh1"]
 rt      = ["xtensa-lx-rt/esp32s3"]
 ufmt    = ["esp-hal-common/ufmt"]
