--- a/esp32c3-hal/Cargo.toml
+++ b/esp32c3-hal/Cargo.toml
@@ -43,12 +43,13 @@ smart-leds        = "0.3"
 esp-println       = { version = "0.2.0", features = ["esp32c3"] }
 
 [features]
-default     = ["rt"]
+default     = ["rt", "vectored"]
 direct-boot = []
 eh1         = ["esp-hal-common/eh1"]
 rt          = ["riscv-rt"]
 smartled    = ["esp-hal-common/smartled"]
 ufmt        = ["esp-hal-common/ufmt"]
+vectored = ["esp-hal-common/vectored"]
 
 [[example]]
 name              = "hello_rgb"
