`critical_section` implementations & esp_backtrace (#151)
* CS impl

* use CS Mutex in C3 examples

* use CS Mutex in S2 examples

* Update esp32 example

* run fmt

* Update S3 examples

* Remove uses of unsafe where no longer required

* use esp_backtrace in examples

* fix import & fmt once more

* Bump MSRV to 1.60.0

Co-authored-by: Jesse Braham <jesse@beta7.io>

--- a/esp32-hal/Cargo.toml
+++ b/esp32-hal/Cargo.toml
@@ -37,10 +37,11 @@ features = ["esp32"]
 
 [dev-dependencies]
 embedded-graphics = "0.7"
-panic-halt        = "0.2"
 ssd1306           = "0.7"
 smart-leds        = "0.3"
 esp-println       = { version = "0.2.0", features = ["esp32"] }
+esp-backtrace     = { version = "0.2", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
+critical-section  = "1"
 
 [features]
 default   = ["rt", "vectored"]
